# BookShelfAPI

./: .gitignore  README.md  alembic.ini  pyproject.toml
.devcontainer/: Dockerfile  app.env  devcontainer.json  docker-compose.yml
.github/workflows/: pytest.yml
app/: __init__.py  dependencies.py  main.py  pyproject.toml  requirements.txt
app/core/: security.py
app/exceptions/: exceptions.py  message.py
app/migration/versions/: 202204251314_added_bookmodel_and_authormodel.py  202312300012_change_tables.py  202312300122_change_author_name_unique_param.py  202312300308_add_users_table.py  202312300607_remove_salt_column.py  202312300640_chage_uniqu_user_model_uniqueconstraint.py  202401160002_add_user_model_verify_columns.py
app/models/: __init__.py  author_model.py  book_author_model.py  book_model.py  setting.py  user_model.py
app/models/factories/: __init__.py  author_model_factory.py  book_author_model_factory.py  book_model_factory.py  user_model_factory.py
app/routers/: __init__.py  book_router.py  login_router.py  setting.py  user_router.py
app/schemas/: exceptions.py
app/schemas/api/: __init__.py  google_book.py
app/schemas/requests/: __init__.py  book.py  books.py  user.py
app/schemas/responses/: __init__.py  book.py  user.py
app/services/: book_service.py  error.py  google_books_api_service.py  image_service.py  login_service.py  mail_service.py
test/: conftest.py
test/models/: test_author_model.py  test_book_author_model.py  test_book_model.py  test_user_model.py
test/routers/: test_book_router.py  test_login_router.py  test_user_router.py
test/services/: test_book_service.py  test_google_books_api.py  test_image_service.py  (+2 more)
(+3 files in other folders)
