[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["oq-Yuki-po <o.yukinko0715@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
sqlalchemy = "^2.0.24"
uvicorn = "^0.25.0"
alembic = "^1.13.1"
httpx = "^0.26.0"
gunicorn = "^21.2.0"
factory-boy = "^3.3.0"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
pillow = "^10.2.0"
sqlalchemy-utils = "^0.41.1"
bcrypt = "^4.1.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
email-validator = "^2.1.0.post1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
isort = "^5.13.2"
autopep8 = "^2.0.4"
pytest-mock = "^3.12.0"
pylint = "^3.0.3"
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
dev = "uvicorn app.main:app --reload"
test = "pytest -v"
db_upgrade = "cd app && alembic upgrade head"
db_downgrade = "cd app && alembic downgrade base"
db_revision = "cd app && alembic revision --autogenerate -m"
