[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["oq-Yuki-po <o.yukinko0715@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
sqlalchemy = "^2.0.24"
uvicorn = "^0.25.0"
alembic = "^1.13.1"
httpx = "^0.26.0"
gunicorn = "^21.2.0"
factory-boy = "^3.3.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
